# rsb

./: .feat.toml  .gitignore  CHANGELOG.md  CONTINUE.md  Cargo.toml  IDEAS.txt  META_PROCESS.txt  README.md  README_FEAT.md  README_FEATS.md  REFRESH_CONTEXT.md  ROADMAP.md  RSB_ANALYSIS.md  RSB_STRING_UPGRADE.md  START.txt  START_CODEX.txt  TASKS.md  TASKS_FEAT2.txt  TODO.txt  test_exitkind_tostring.rs
.analysis/: CONSOLIDATION_INDEX.txt  UAT_REPORT_PHASE1_2025-09-29.md  UAT_REVIEW_STRING_FIXES_2025-09-29.md  UAT_REVIEW_TOML_SNOOPING_2025-09-29.md  consolidated_wisdom.txt  mvp_triage.txt  rsb_faq_quick_reference.txt  technical_debt.txt
.analysis/.eggs/: egg.1.rsb-documentation-categorization-analysis.txt  egg.2.consolidated-wisdom-extraction-meta-process.txt  egg.3.meta-process-v2-implementation-guidance.txt
.cargo/: config.toml
.eggs/: badge.tina.api-validation-excellence.txt  egg.001.repl-v1-validation.txt  egg.02.repl-validation.txt  egg.1.feat-readme-update.txt  egg.1.feat-tool-review.txt  egg.1.feat2-implementation-review.txt  egg.1.guard-functions-coverage.txt  egg.1.gx-package-analysis.txt  egg.1.macro-reorganization.txt  egg.1.math-expressions-analysis.txt  egg.1.module-compliance-analysis.txt  egg.1.object-module-summary.txt  egg.1.phase2-rsb-v2-preparation.txt  egg.1.repl-phase-2-validation.txt  egg.1.rsb-framework-comprehensive-analysis.txt  egg.1.rsb-sanity-test-progress.txt  egg.1.uat-sanity-test-organization-analysis.txt  egg.2.readme-review.txt  egg.2.repl-documentation-cleanup.txt  egg.2.rsb-faq-quick-reference.txt  egg.2.toml-snooping-analysis.txt  egg.3.rsb-feature-gaps-and-opportunities.txt  egg.9.final-progress-achievement.txt  egg.strategic-rsb-modernization.txt  feed.china.premium.txt  feed.tina.premium.txt  red_egg.1.phase1-migration-validation.txt  red_egg.1.rsb_test_organization_validation.txt  red_egg.1.test-validation-comprehensive.txt  red_egg.2.api-triage.txt  red_egg.2.api-validation-brutal-truth.txt  red_egg.3.api-modernization-validation.txt  red_egg.3.features_global_removal_validation.txt  red_egg.6.gx-sanity-test-validation.txt  red_egg.7.api-truth-red-laser-validation.txt
.session/: BACKUP_2025-09-15_TASKS.txt  CONTINUE.md  CONTINUE_SESSION10.md  PLAN_BASH.md  PLAN_CLI.md  PLAN_COLORS.md  PLAN_DATE.md  PLAN_GLOBAL.md  PLAN_HOST.md  PLAN_OPTIONS.md  PLAN_OPTIONS_STDOPTS.md  PLAN_PARAMS.md  PLAN_PROMPTS.md  PLAN_STRINGS.md  PLAN_THREADS.md  PLAN_TOKENS.md  PROJECT_STATUS_SUMMARY.md  SESSION_02_token_migration_and_cli_fixes.md  SESSION_04_math_module_comprehensive_transformation.md  SESSION_05_progress_integration_and_deps.md  SESSION_07_com_module_restructure.md  SESSION_08_test_documentation_system.md  SESSION_09_test_migration_completion.md  SESSION_12_CONTINUATION.md  SESSION_CURRENT.md  SESSION_NOTES.md  TASKS.txt  TEST_TASKS.txt  TEST_TASKS_VALIDATION_SUMMARY.txt
.session/00-refactor/: ISSUES.md  TASKS.txt  restruct.txt  upstruct.txt
.session/01-xstream/: CONTINUE.txt  FUNCTION_ANALYSIS.txt  RSB_XSTREAM_MIGRATION.txt
.session/03-rsb_cleanup/: CONTINUE.md  SESSION_CURRENT.md
.session/04-cleanup/: ARCHITECTURE_REFRESH.md
.session/refactor/: ANALYSIS_CONTINUE.md  CONTEXT_MIGRATION.txt  CONTINUE.md  NEXT_FEATURES.md  STRING_ERROR_PLAN.md  SUMMARY.md  xsplan.txt
.session/rsb_complete/: CONTINUE.md
.session/xstream/: RSB_XSTREAM_MIGRATION_alt.txt  RSB_XSTREAM_ROADMAP.txt
docs/feats/: FEATURES_REPL.md
docs/misc/: CONTRIBUTING.md
docs/procs/: CONTINUE.md  DONE.txt  LEGACY_UPGRADE_PLAN.md  PROCESS.txt  QUICK_REF.txt  REFRESH_CONTEXT.md  REPL_COMPLETION.md  REPL_CONTEXT.md  ROADMAP.txt  SPRINT.txt  TASKS.txt
docs/proposals/: IDEAS_IMPLEMENTATION_PLAN.md  REPL_STRATEGY.md  RSB_STRING_UPGRADE.md
docs/ref/: HOWTO_HUB.md
docs/tech/: FEAT2_STRATEGY.md  INDEX.md
examples/: cli_e2e.rs  dashboard_failure_test.rs  dashboard_quick_test.rs  minimal_cli.rs  progress_colors_demo.rs  progress_dashboard_demo.rs  prompts_demo.rs  prompts_timeout_demo.rs  prompts_utils_demo.rs  repl_demo.rs  showcase.rs  strings.rs  thread_macros_demo.rs  threads.rs
examples/.eggs/: egg.1.example-audit.txt
ref/: stdfx.sh
roadmap/tasks/: sprint.md
src/: deps.rs  dev.rs  dev_chars.rs  dummy_cli.rs  fs.rs  lib.rs  os.rs  prelude.rs  prelude_dev.rs  prelude_ez.rs  random.rs  streams.rs  utils.rs
src/_todo/: README.md
src/bash/: jq.rs  macros.rs  mod.rs  utils.rs
src/cli/: args.rs  bootstrap.rs  dispatch.rs  flags.rs  help.rs  helpers.rs  macros.rs  mod.rs  options.rs  utils.rs
src/colors/: macros.rs  mod.rs  registry.rs  simple.rs  util.rs
src/com/: bool.rs  exit.rs  macros.rs  mod.rs  utils.rs
src/date/: helpers.rs  macros.rs  mod.rs  utils.rs
src/dev/: mod.rs  pty.rs
src/fs/: macros.rs  mod.rs  utils.rs
src/global/: adapter.rs  array.rs  config.rs  macros.rs  mod.rs  ns.rs  registry.rs  store.rs  utils.rs
src/gx/: gx_fs_adapter.rs  gx_math_adapter.rs  macros.rs  mod.rs  utils.rs  x.rs
src/hosts/: bootstrap.rs  command.rs  env.rs  events.rs  global.rs  host_global.rs  host_path.rs  macros.rs  mod.rs  os.rs  paths.rs  process.rs  rsb_path.rs  shell.rs  signal.rs  system.rs  utils.rs  virt_path.rs  xdg_path.rs
src/jobs/: core.rs  macros.rs  utils.rs
src/macros/: control_validation.rs  fs_data.rs  jobs_events.rs  json_dict_random.rs  math.rs  mod.rs  stderr.rs  streams_exec.rs  test_helpers.rs  text.rs  visual.rs
src/math/: comparison.rs  macros.rs  (+1 more)
tests/: README_TEST.md  all-tests.rs  bash_sanity.rs  bench.rs  bootstrap-lifecycle.rs  chaos.rs  com_sanity.rs  com_uat.rs  comprehensive-suite.rs  dev_pty.rs  e2e.rs  features_colors.rs  features_date.rs  features_dispatch.rs  features_param.rs  features_string.rs  features_tokens.rs  generators_sanity.rs  global_core.rs  global_ns.rs  gx_sanity.rs  host_bootstrap.rs  integration.rs  known-defects.rs  macro-smoke.rs  math_sanity.rs  math_uat.rs  options.rs  prompts_sanity.rs  regression-suite.rs  regression.rs  rsb-integration.rs  sanity.rs  sanity_cli_args.rs  sanity_colors.rs  sanity_global_clear.rs  sanity_jobs.rs  sanity_main.rs  sanity_object.rs  sanity_options_cleanup.rs  (+20 more)
(+384 files in other folders)
