[package]
name = "rsb"
version = "0.2.18"
description = "The official implementation of REBEL philosophy of developer ergonomics and productivity focus, framework/library"
license = "AGPL-3.0"                 
repository = "https://github.com/oodx/rsb-framework"
edition = "2021"

[features]
default = []

# Visual enhancements package
visual = []

# Color packages (hierarchical dependencies)
colors-simple = ["visual"]
colors-named = ["visual", "colors-simple"]
colors-status = ["visual"]
colors-all = ["visual", "colors-simple", "colors-named", "colors-status"]

# Convenience umbrella for baseline colors
colors = ["visual", "colors-simple"]

# Everything visual in one go (colors + glyphs + prompts)
visuals = [
    "visual",
    "colors-simple", "colors-named", "colors-status",
    "glyphs", "prompts",
]

# Other visual components
glyphs = ["visual"]
prompts = ["visual", "colors-simple"]

# Standard options auto expansion
stdopts = []

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
libc = "0.2.153"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.1"
rand = "0.9.2"
uuid = { version = "1.17.0", features = ["v4"] }
base64 = "0.22"
urlencoding = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.0"

[lib]
name = "rsb"
path = "src/lib.rs"

[[bin]]
name = "dummy-cli"
path = "src/dummy_cli.rs"

[[example]]
name = "showcase"
path = "examples/showcase.rs"
required-features = ["visuals"]
