[package]
name = "rsb"
version = "0.9.0"
description = "The official implementation of REBEL philosophy of developer ergonomics and productivity focus, framework/library"
license = "AGPL-3.0"                 
repository = "https://github.com/oodx/rsb"
edition = "2021"

[features]
default = ["visual", "colors-simple", "colors-named", "colors-status", "glyphs", "prompts"]

# Core color registry (shared by all visual packages)
colors-core = []

# Visual orchestration (macros, prompts wiring)
visual = ["colors-core"]

# Color packages (hierarchical dependencies)
colors-simple = ["colors-core"]
colors-named = ["colors-core", "colors-simple"]
colors-status = ["colors-core"]
colors-all = ["colors-core", "colors-simple", "colors-named", "colors-status"]

# Convenience umbrella for baseline colors
colors = ["colors-core", "colors-simple"]

# Everything visual in one go (colors + glyphs + prompts)
visuals = [
    "visual",
    "colors-simple", "colors-named", "colors-status",
    "glyphs", "prompts",
]

# Other visual components
glyphs = ["visual"]
prompts = ["visual", "colors-simple"]

# Progress indicators (modular, zero-dep core)
progress = []

# Development/testing utilities (optional)
# Provides PTY wrapper utilities for interactive test scenarios.
dev-pty = ["portable-pty"]

# Dependency re-exports (rsb::deps) surface
# Per-dependency opt-ins with an umbrella alias. Consumers can enable
# individual deps (e.g., `deps-chrono`) or the whole set via `deps`.
deps-base64 = []
deps-chrono = []
deps-glob = []
deps-lazy_static = []
deps-libc = []
deps-rand = []
deps-regex = []
deps-serde = []
deps-serde_json = []
deps-urlencoding = []
deps-uuid = []

deps-all = [
    "deps-base64",
    "deps-chrono",
    "deps-glob",
    "deps-lazy_static",
    "deps-libc",
    "deps-rand",
    "deps-regex",
    "deps-serde",
    "deps-serde_json",
    "deps-urlencoding",
    "deps-uuid",
]

# Convenience alias for the full set
deps = ["deps-all"]

# Standard options auto expansion
stdopts = []

# Object type for flexible configuration and data structures
object = []

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
libc = "0.2.153"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.1"
rand = "0.9.2"
uuid = { version = "1.17.0", features = ["v4"] }
base64 = "0.22"
urlencoding = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
#
portable-pty = { version = "0.9", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.0"
serial_test = "3.0"

[lib]
name = "rsb"
path = "src/lib.rs"

[[bin]]
name = "dummy-cli"
path = "src/bin/dummy_cli.rs"

[[bin]]
name = "rsbdoc"
path = "bin/rsb_docs_cli.rs"

[[example]]
name = "showcase"
path = "examples/showcase.rs"

[[example]]
name = "progress_colors_demo"
path = "examples/progress_colors_demo.rs"
required-features = ["progress", "colors-core", "colors-simple", "colors-status"]

[[example]]
name = "progress_dashboard_demo"
path = "examples/progress_dashboard_demo.rs"
required-features = ["progress", "colors-core", "colors-simple", "colors-status"]

[[example]]
name = "dashboard_quick_test"
path = "examples/dashboard_quick_test.rs"
required-features = ["progress", "colors-core", "colors-simple", "colors-status"]
